# src/routes/auth/validation/resetPassword.validation.ts
@@ -10,9 +10,4 @@ export const resetPasswordValidation = validationMiddleware({
         'must be minimum 10 characters, must contain at least 1 special character, must contain at least 1 number, must contain at least 1 uppercase letter',
     },
   },
-  confirmedPassword: {
-    presence: true,
-    equality: 'password',
-    message: 'must match password',
-  },
 });
